--- a/openatlas/translations/en/LC_MESSAGES/messages.po
+++ b/openatlas/translations/en/LC_MESSAGES/messages.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2020-06-14 18:27+0200\n"
-"PO-Revision-Date: 2020-06-14 18:29+0200\n"
+"PO-Revision-Date: 2020-07-01 14:11+0200\n"
 "Last-Translator: Alexander Watzinger <alexander.watzinger@craws.net>\n"
 "Language: en\n"
 "Language-Team: en <LL@li.org>\n"
@@ -367,7 +367,7 @@ msgstr ""
 
 #: openatlas/templates/405.html:12
 msgid "This method is not allowed here!"
-msgstr ""
+msgstr "This method is not allowed here!"
 
 #: openatlas/templates/layout.html:39 openatlas/util/filters.py:401
 #: openatlas/util/util.py:305
@@ -1161,17 +1161,8 @@ msgstr "notes"
 #: openatlas/templates/index/index.html:68
 msgid "text_intro"
 msgstr ""
-"%(link_openatlas)s is a database application that enables you to manage "
-"complex historical, archeological  and geospatial data.\n"
-"\n"
-"OpenAtlas is Open Source and available on %(link_github)s. It uses open source "
-"technology like Apache, PostgreSQL, PostGIS, Python 3, Flask and Leaflet.\n"
-"\n"
-"The data model is based on classes and properties of the %(link_cidoc)s which "
-"is an internationally established standard for historical documentation.\n"
-"\n"
-"For detailed information please visit our %(link_wiki)s and project management "
-"site or try out our %(link_demo)s."
+"is a database application that enables you to manage complex historical, "
+"archeological  and geospatial data."
 
 #: openatlas/templates/index/index.html:75
 msgid "team"
